# noteTab

./: .gitignore  LICENSE  build.sh  buildAll.sh  notetab.plist  readme.md  run.sh
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js
client/src/bits/: Wrapper.css  Wrapper.js  deleteButton.js  searchFilter.js  useInputState.js  useLastState.js
client/src/io/: api.js
client/src/pages/: home.js  new.js  tab.js
client/src/util/: generateNoteTabKey.js
server/: Cargo.toml  rocket.toml
server/src/: main.rs
server/src/activity/: delete_note_tab.rs  get_note_tab.rs  list_note_tabs.rs  mod.rs  save_note_tab.rs  validate_key.rs
server/src/data/: injectables.rs  mod.rs  note_tab.rs  note_tab_key.rs
server/src/io/: fileio.rs  iointerface.rs  mod.rs  note_tab_io.rs  string_io_file_impl.rs  string_io_interface.rs
