[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.rocket]
version = "0.5.0"
features = ["json"]
# json documentation https://api.rocket.rs/v0.5/rocket/serde/json/struct.Json.html

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"